front/service-front.yml
apiVersion: v1
kind: Service
metadata:
  name: rocket-service-front
spec:
  selector:
    app: rocket-service-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
  type: ClusterIP
