front/gateway-front.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rocket-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80  # Должен совпадать с портом в Service istio-ingressgateway
        name: http
        protocol: HTTP
      hosts:
        - "arteemtkacheev2.fvds.ru"  # Ваш домен
