front/ingress-front.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocket-service-front
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: arteemtkacheev2.fvds.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rocket-service-front
                port:
                  number: 80
