front/virtual-service-front.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rocket-service-front
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/rocket-gateway  # Привязка к Gateway в namespace istio-system
  http:
    - match:
        - uri:
            prefix: /sign-up
        route:
          - destination:
              host: rocket-auth-service.default.svc.cluster.local
              port:
                number: 8080
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rocket-service-front.default.svc.cluster.local
            port:
              number: 80  # Порт Service (не контейнера!)
